Implementação do primeiro teste unitário de view.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,8 @@ android {
     compileSdkVersion 23
     buildToolsVersion "23.0.2"
 
+    useLibrary 'org.apache.http.legacy'
+
     defaultConfig {
 
         applicationId "com.orogersilva.androidtesting"
@@ -39,6 +41,8 @@ dependencies {
 
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:1.+'
+    testCompile 'org.hamcrest:hamcrest-library:1.1'
+    testCompile "org.robolectric:robolectric:3.0"
 
     compile 'com.android.support:recyclerview-v7:23.0.+'
     compile 'com.android.support:appcompat-v7:23.1.1'
