--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,7 @@ dependencies {
 
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'io.realm:realm-android:0.87.2'
+    compile 'com.firebase:firebase-client-android:2.5.0+'
 }
 
 // Show test status in console.
