--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,7 @@
 apply plugin: 'com.android.application'
 
+apply from: "${rootProject.getRootDir()}/config/quality/quality.gradle"
+
 android {
 
     compileSdkVersion 23
